backport to 1.20.4