@@ -66,7 +66,7 @@ public class VersionChecker {
                     }
                     List<Version> versions = new ArrayList<>(processVersionListWithDefaultLayout(remoteVersions, true, INVALID_VERSIONS));
                     if (!versions.isEmpty()) {
-                        newestVersion = versions.getLast();
+                        newestVersion = versions.get(versions.size() - 1);
                     }
                     CACHED_VERSION.put(modid, newestVersion);
                 }
@@ -95,7 +95,7 @@ public class VersionChecker {
                     List<String> remoteVersions = getVersionsFromGitHub(owner, repo, releasesInsteadOfTags);
                     List<Version> versions = new ArrayList<>(processVersionListWithDefaultLayout(remoteVersions, useLastPartOfVersion, invalidVersions));
                     if (!versions.isEmpty()) {
-                        newestVersion = versions.getLast();
+                        newestVersion = versions.get(versions.size() - 1);
                     }
                     CACHED_VERSION.put(modid, newestVersion);
                 } else {
@@ -194,7 +194,7 @@ public class VersionChecker {
                     List<String> remoteVersions = getVersionsFromModrinth(slug);
                     List<Version> versions = new ArrayList<>(processVersionListWithDefaultLayout(remoteVersions, useLastPartOfVersion, invalidVersions));
                     if (!versions.isEmpty()) {
-                        newestVersion = versions.getLast();
+                        newestVersion = versions.get(versions.size() - 1);
                     }
                     CACHED_VERSION.put(modid, newestVersion);
                 } else {
